# Portfolio

./: .gitignore  pyproject.toml  render.yaml  requirements.txt
Portfolio/: settings.py  urls.py
home/: urls.py  views.py
langrec/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
langrec/core/: codes.txt  langrec.py
langrec/fixtures/: Languages.json
langrec/migrations/: 0001_initial.py  0002_auto_20220107_0921.py  0003_language_url.py  0004_alter_language_code.py
language_recommender/: codes.py  langrec.py  languages_dump.json
language_recommender/data/: simtri-ab.txt  simtri-af.txt  simtri-ak.txt  simtri-ang.txt  simtri-arc.txt  simtri-arz.txt  simtri-ast.txt  simtri-av.txt  simtri-ay.txt  simtri-bat-smg.txt  simtri-bcl.txt  simtri-be-x-old.txt  simtri-bh.txt  simtri-bi.txt  simtri-bjn.txt  simtri-bo.txt  simtri-bpy.txt  simtri-br.txt  simtri-bs.txt  simtri-bxr.txt  simtri-ca.txt  simtri-ceb.txt  simtri-co.txt  simtri-cr.txt  simtri-crh.txt  simtri-csb.txt  simtri-cu.txt  simtri-cy.txt  simtri-da.txt  simtri-de.txt  simtri-dz.txt  simtri-ee.txt  simtri-el.txt  simtri-eml.txt  simtri-eu.txt  simtri-ext.txt  simtri-fo.txt  simtri-frp.txt  simtri-frr.txt  simtri-fur.txt  (+93 more)
projects/: models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_language.py  0003_project_description_alter_project_language_and_more.py  0004_project_image_alter_project_link.py  0005_alter_project_image.py  0006_alter_project_image.py  0007_alter_project_image.py  0008_remove_project_language_project_languages_and_more.py  (+2 more)
templates/: base.html
(+139 files in other folders)
